Experiments with About Layout

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -7,6 +7,10 @@ layout: default
     <h1 class="post-title">{{ page.title | escape }}</h1>
   </header>
 
+  <div class="flex-left">
+    <img src="{{ site.github.url }}/img/me-576x1024.png">
+  </div>
+
   <div class="post-content">
     {{ content }}
   </div>
