--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,7 +19,7 @@ layout: default
   <h2 class="page-heading">Games</h2>
 
   <ul class="post-list">
-    {% for post in site.posts %}
+    {% for post in site.categories.game %}
       <li class="half-width">
           <a class="post-link" href="{{ post.url | relative_url }}"><img src="{{ site.github.url }}{{ post.image }}"></a>
       </li>
