--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -7,12 +7,19 @@ layout: default
     <h1 class="post-title">{{ page.title | escape }}</h1>
   </header>
 
-  <div class="flex-left">
-    <img src="{{ site.github.url }}/img/me-576x1024.png">
+  <div class="flex-container">
+    <div class="flex-left">
+      <img src="{{ site.github.url }}/img/me-576x1024.png">
+    </div>
+  
+    <div class="post-content">
+      {{ content }}
+    </div>
   </div>
 
-  <div class="post-content">
-    {{ content }}
-  </div>
 
+  <div>
+    <p>If you are interested in contacting me, you can do so via <a href="mailto:connor.botts@gmail.com">email</a> or <a href="https://twitter.com/theconbot">Twitter</a>!</p>
+    <p>Thanks to <a href="https://twitter.com/nathanwentworth">@nathanwentworth</a> for creating this website!</p>
+  </div>
 </article>
