changed about to grid, centered bottom paragraph

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -18,7 +18,7 @@ layout: default
   </div>
 
 
-  <div>
+  <div class="center">
     <p>If you are interested in contacting me, you can do so via <a href="mailto:connor.botts@gmail.com">email</a> or <a href="https://twitter.com/theconbot">Twitter</a>!</p>
     <p>Thanks to <a href="https://twitter.com/nathanwentworth">@nathanwentworth</a> for creating this website!</p>
   </div>
