--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -8,7 +8,7 @@ layout: default
   </header>
 
   <div class="flex-container">
-    <div class="flex-left">
+    <div>
       <img src="{{ site.github.url }}/img/me-576x1024.png">
     </div>
   
