--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -9,7 +9,7 @@ layout: default
 
   <div class="flex-container">
     <div>
-      <img src="{{ site.github.url }}/img/me-576x1024.png">
+      <img src="{{ site.github.url }}/img/me2.jpg">
     </div>
   
     <div class="post-content">
@@ -19,7 +19,7 @@ layout: default
 
 
   <div class="center">
-    <p>If you are interested in contacting me, you can do so via <a href="mailto:connor.botts@gmail.com">email</a> or <a href="https://twitter.com/theconbot">Twitter</a>!</p>
+    <p>If you are interested in contacting me, you can do so via <a href="mailto:connor.botts@gmail.com">email</a>!</p>
     <p>Thanks to <a href="https://twitter.com/nathanwentworth">@nathanwentworth</a> for creating this website!</p>
   </div>
 </article>
